# last.fm-apis

./: Cargo.toml  README.md  test.html
src/: auth.rs  errors.rs  lib.rs  utils.rs
