[package]
name = "lastfm-apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]

[dependencies]
dxr = "0.6.2"
dxr_client = { version = "0.6.2", features = ["reqwest"] }
hex = "0.4.3"
log = "0.4.21"
md5 = "0.7.0"
reqwest = { version = "0.11.26", features = ["blocking"] }
roxmltree = "0.19.0"
